--- a/Lab4b/Makefile
+++ b/Lab4b/Makefile
@@ -4,8 +4,8 @@
 lab4.bin:	lab4final.s
 		nasm lab4final.s -o lab4.bin -l lab4.lst
 
-lab4final.s:	clib.s myisr.s myinth.s yakc.s yaks.s lab4_app.s
-		cat clib.s myisr.s myinth.s yakc.s lab4_app.s > lab4final.s
+lab4final.s:	clib.s myisr.s myinth.s yakc.s yaks.s lab4b_app.s
+		cat clib.s myisr.s myinth.s yakc.s lab4b_app.s > lab4final.s
 
 myinth.s:	myinth.c
 		cpp myinth.c myinth.i
@@ -15,7 +15,7 @@ yakc.s:		yakc.c
 		cpp yakc.c yakc.i
 		c86 -g yakc.i yakc.s
 
-lab4_app.s:		lab4b_app.c
+lab4b_app.s:		lab4b_app.c
 		cpp lab4b_app.c lab4b_app.i
 		c86 -g lab4b_app.i lab4b_app.s
 		
