runs without so many bugs, just need to fix logic algo

--- a/lab8/Makefile
+++ b/lab8/Makefile
@@ -5,7 +5,7 @@ lab8.bin:	lab8final.s
 		nasm lab8final.s -o lab8.bin -l lab8.lst
 
 lab8final.s:	clib.s myisr.s simptris.s simptris_inth.s simptris_isr.s myinth.s yakc.s yaks.s lab8app.s
-		cat clib.s myisr.s simptris.s simptris_inth.s simptris_isr.s myinth.s yakc.s yaks.s lab8app.s > lab8final.s
+		cat clib.s lab8app.s myisr.s simptris.s simptris_inth.s simptris_isr.s myinth.s yakc.s yaks.s > lab8final.s
 
 myinth.s:	myinth.c
 		cpp myinth.c myinth.i
